rating added; order redesigned; bug fixes;

--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -80,9 +80,11 @@
     "item": "Item | Itens",
     "name": "Nome",
     "number": "Número",
+    "overall": "Geral",
     "password": "Senha",
     "payment_method": "Método de pagamento",
     "province": "Estado",
+    "review": "Avaliação | Avaliações",
     "shipping": "Entraga",
     "shipping_address": "Endereço de entrega",
     "subtotal": "Subtotal",
