--- a/locales/en-CA.json
+++ b/locales/en-CA.json
@@ -83,9 +83,11 @@
     "item": "Item | Items",
     "name": "Name",
     "number": "Number",
+    "overall": "Overall",
     "password": "Password",
     "payment_method": "Payment Method",
     "province": "Province",
+    "review": "Review | Reviews",
     "shipping": "Shipping",
     "shipping_address": "Shipping Address",
     "subtotal": "Subtotal",
